--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,15 @@
 						<tbody>
 							<tr>
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
+								<h2 style="font-style:italic;" id="conference">&nbsp;Journal</h2>
+									<ul>
+										<li>M. G. Padalkar and M. V. Joshi, "Auto-inpainting Heritage Scenes: A Complete Framework for Detecting and Infilling Cracks in Images and Videos with Quantitative Assessment," <i>Machine Vision and Applications (MVA)</i> (to appear).
+										<br/>(<a target="_blank" href="http://www.springer.com/computer/image+processing/journal/138">Journal Impact Factor (Jan. 2015): 1.444</a>)<br/><br/></li>
+									</ul>
+								</td>								
+							</tr>
+							<tr>
+								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="conference">&nbsp;Conference</h2>
 									<ul>
 										<li>M. G. Padalkar, M. V. Joshi, M. A. Zaveri, and C. M. Parmar, "Exemplar based Inpainting using Autoregressive Parameter Estimation," in <i>Proceedings of the International Conference on Signal, Image and Video Processing (ICSIVP'12)</i>, IIT Patna, India, Jan. 2012, pp. 154-160.
