Publication link added
Updated CV and added link to MVA publication

--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="conference">&nbsp;Journal</h2>
 									<ul>
-										<li>M. G. Padalkar and M. V. Joshi, "Auto-inpainting Heritage Scenes: A Complete Framework for Detecting and Infilling Cracks in Images and Videos with Quantitative Assessment," <i>Machine Vision and Applications (MVA)</i> (to appear).
+										<li>M. G. Padalkar and M. V. Joshi, "Auto-inpainting Heritage Scenes: A Complete Framework for Detecting and Infilling Cracks in Images and Videos with Quantitative Assessment," <i>Machine Vision and Applications (MVA)</i>, Jan 2015.  [Online]. Available:  <a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/s00138-015-0661-6">http://dx.doi.org/10.1007/s00138-015-0661-6</a>.
 										<br/>(<a target="_blank" href="http://www.springer.com/computer/image+processing/journal/138">Journal Impact Factor (Jan. 2015): 1.444</a>)<br/><br/></li>
 									</ul>
 								</td>								
