Updated link for SVNIT PhD RPS
Updated link for SVNIT PhD RPS

--- a/links.html
+++ b/links.html
@@ -117,15 +117,15 @@
 							</h3>
 							<ul>
 								<li>
-									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDThesis--yesPB-/releases/tag/13.12.11'>Template in LaTeX (with page border on initial pages) (v13.12.11)</a>
+									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDThesis--yesPB-/releases/latest'>Template in LaTeX (with page border on initial pages) (v13.12.11)</a>
 									</h4>
 								</li>
 								<li>
-									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDThesis--noPB-/releases/tag/13.11.26'>Template in LaTeX (without page border on initial pages) (v13.11.26)</a>
+									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDThesis--noPB-/releases/tag/latest'>Template in LaTeX (without page border on initial pages) (v13.11.26)</a>
 									</h4>
 								</li>
 								<li>
-									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDrps--yesPB/releases/tag/15.04.22'>RPS Template in LaTeX (with page border on initial pages)</a>
+									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDrps--yesPB/releases/latest'>RPS Template in LaTeX (with page border on initial pages)</a>
 									<font style="color: red;">(new v15.04.22)</font>
 									</h4>
 								</li>
