Small update after BMCV acceptance
small update

--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="conference">&nbsp;Conference</h2>
 									<ul>
-										<li>M. G. Padalkar, M. V. Joshi and N. Khatri, "Simultaneous Inpainting and Super-resolution Using Self-learning," in <i>26th British Machine Vision Conference (BMVC-2015)</i>, Swansea, UK, Sept. 7-10, 2015. (accepted)</li>
+										<li>M. G. Padalkar, M. V. Joshi and N. Khatri, "Simultaneous Inpainting and Super-resolution Using Self-learning," in <i>26th British Machine Vision Conference (BMVC-2015)</i>, Swansea, UK, Sept. 7-10, 2015. (accepted)<br/><br/></li>
 										<li>M. G. Padalkar, M. V. Joshi, M. A. Zaveri, and C. M. Parmar, "Exemplar based Inpainting using Autoregressive Parameter Estimation," in <i>Proceedings of the International Conference on Signal, Image and Video Processing (ICSIVP'12)</i>, IIT Patna, India, Jan. 2012, pp. 154-160.
 										<br/>[<a target="_blank" href="./files/paper51.pdf?attredirects=0&amp;d=1/index.html">draft</a>]<br/><br/></li>
 										<li>M. G. Padalkar and M. A. Zaveri, "Dissolve Detection Based Shot Identification Using Singular Value Decomposition," in <i>Proceedings of the 2010 Fourth Asia International Conference on Mathematical/Analytical Modelling and Computer Simulation (AMS'10),</i> IEEE Computer Society, Kota Kinabalu, Malaysia, May 2010, pp. 312-316. [Online]. Available: <a rel='nofollow' target='_blank' href='http://dx.doi.org/10.1109/AMS.2010.69'>http://dx.doi.org/10.1109/AMS.2010.69</a><br/><br/>
