--- a/links.html
+++ b/links.html
@@ -46,7 +46,7 @@
 				
 						<ul>
 							<li>
-								<h4><a target='_blank' rel='nofollow' href='http://milindpadalkar.wordpress.com/2011/05/04/installing-texlive-2010-in-ubuntu-10-04-10-10-and-11-04/'>Installing TeXLive 2010-12 using ISO in Ubuntu 10.04-14.04</a>
+								<h4><a target='_blank' rel='nofollow' href='http://milindpadalkar.wordpress.com/2011/05/04/installing-texlive-2010-in-ubuntu-10-04-10-10-and-11-04/'>Installing TeXLive 2010-12 using ISO in Ubuntu</a>
 								</h4>
 							</li>
 							<li>
