--- a/links.html
+++ b/links.html
@@ -37,7 +37,7 @@
 						</li>
 						
 						<li>
-							<h3><a rel='nofollow' target='_blank' href='http://www.svnit.ac.in/Faculty_form/showpage.php?empcode=1062'>Dr. Mukesh A. Zaveri</a> (SVNIT, Surat, India)</h3>
+							<h3><a rel='nofollow' target='_blank' href='http://www.svnit.ac.in/maz/'>Dr. Mukesh A. Zaveri</a> (SVNIT, Surat, India)</h3>
 						</li>
 						
 						<li>
