--- a/links.html
+++ b/links.html
@@ -143,7 +143,7 @@
 							</h3>
 							<ul>
 								<li>
-									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDThesis--yesPB-/releases/latest'>Template in LaTeX (with page border on initial pages) (v13.12.11)</a>
+									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDThesis--yesPB-/releases/latest'>Template in LaTeX (with page border on initial pages) <font style="color: red;">(new v16.01.03 [allows the use of pdflatex command])</font></a> 
 									</h4>
 								</li>
 								<li>
@@ -152,7 +152,6 @@
 								</li>
 								<li>
 									<h4><a rel='nofollow' target='_blank' href='https://github.com/mgpadalkar/SVNITPhDrps--yesPB/releases/latest'>RPS Template in LaTeX (with page border on initial pages)</a>
-									<font style="color: red;">(new v15.04.22)</font>
 									</h4>
 								</li>
 							</ul>
