--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google MyCitations</a>
 									<br>
 									<p style="text-align: justify; margin-right: 30px; margin-left: 1px; font: 16px Arial,sans-serif; height:28p">
-									I am a PhD student in the Pattern Recognition and Image Processing Group at Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT), Gandhinagar. Also I am working as a Junior Research Fellow (JRF) at DA-IICT on the Indian Digital Heritage (IDH)-Hampi project. I completed M.Tech. in Computer Engineering from S. V. National Institute of Technology, Surat, India and B.E. in I.T. from University of Mumbai in 2010 and 2008, respectively.
+									I am a PhD student working under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. M. V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT), Gandhinagar, India. Also I am working as a Junior Research Fellow (JRF) at DA-IICT on the Indian Digital Heritage (IDH)-Hampi project. I completed M.Tech. in Computer Engineering under the supervision of <a href='http://www.svnit.ac.in/maz/' target='_blank'>Prof. M. A. Zaveri</a> at S. V. National Institute of Technology, Surat, India in 2010 and B.E. in Information Technology from The University of Mumbai in 2008.
 									</p>
 								</td>
 							</tr>
