--- a/publications.html
+++ b/publications.html
@@ -51,7 +51,7 @@
 								<h2 style="font-style:italic;" id="conference">&nbsp;Conference</h2>
 									<ul>
 										<li>M. G. Padalkar, M. V. Joshi and N. Khatri, "Simultaneous Inpainting and Super-resolution Using Self-learning," in <i>26th British Machine Vision Conference (BMVC-2015)</i>, Swansea, UK, Sept. 7-10, 2015, pp. 105.1-105.12.
-										[Online]. Available: <a rel='nofollow' target='_blank'  href='http://bmvc2015.swansea.ac.uk/proceedings/papers/paper105/index.html'>http://bmvc2015.swansea.ac.uk/proceedings/papers/paper105/index.html</a> 
+										[Online]. Available: <a rel='nofollow' target='_blank'  href='https://dx.doi.org/10.5244/C.29.105'>https://dx.doi.org/10.5244/C.29.105</a> 
 										[<a href="./files/bmvc2015_329_poster.pdf" target="_blank">poster</a>] 
 										[<font color="green">Supported by Xerox Research Centre India Travel Grant</font>]
 										<br/><br/></li>
