--- a/links.html
+++ b/links.html
@@ -72,7 +72,11 @@
 							<h3>My Blog - <a rel='nofollow' target='_blank' href='http://milindpadalkar.wordpress.com/'>Techreconn</a></h3>
 						</li>
 				
-						<ul>
+						<ul>							
+							<li>
+								<h4><a target='_blank' rel='nofollow' href='https://milindpadalkar.wordpress.com/2016/03/04/installing-torch-without-root-privileges/'>Installing Torch without root privileges</a><font style="color: red;"> (new) </font>
+								</h4>
+							</li>
 							<li>
 								<h4><a target='_blank' rel='nofollow' href='http://milindpadalkar.wordpress.com/2011/05/04/installing-texlive-2010-in-ubuntu-10-04-10-10-and-11-04/'>Installing TeXLive using ISO in Ubuntu</a>
 								</h4>
