Publication, index, CV updated
Publication, index, CV updated

--- a/education.html
+++ b/education.html
@@ -42,9 +42,9 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>2011 - till date<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>PhD Candidate</b>,<br/>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>PhD Candidate (synopsis presented)</b>,<br/>
 										<i>Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT)</i>, Gandhinagar, India.<br>
-										Advisor: Dr. Manjunath V. Joshi
+										Supervisor: Dr. Manjunath V. Joshi
 										</td>
 									</tr>
 									<tr><td><br></td></tr>
@@ -56,7 +56,7 @@
 										<i>Sardar Vallabhbhai National Institute of Technology (SVNIT)</i>, Surat, India.<br>
 										CGPA 8.75/10.<br>
 										Thesis title: Histogram Based Efficient Video Shot Detection Algorithms<br>
-										Advisor: Dr. Mukesh A. Zaveri
+										Supervisor: Dr. Mukesh A. Zaveri
 										</td>
 									</tr>	
 									<tr><td><br></td></tr>
@@ -65,6 +65,7 @@
 										</b>
 										</td>
 										<td style='width:873px;height:42px;vertical-align:text-top;'><b>B.E. in Information Technology</b>,<br>
+										<i>Finolex Academy of Management and Technology, Ratnagiri,</i><br>
 										<i>University of Mumbai</i>, India.<br>
 										Aggregate Percentage 61.67%.<br>
 										Project title: Content Based Image Retrieval System<br>
@@ -116,6 +117,14 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="experience">&nbsp;Experience</h2>						
 								<table>
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Apr. 2016 - till date<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Teaching Assistant</b>,<br/>
+										DA-IICT, Gandhinagar, India</i>.<br><br>
+										</td>
+									</tr>								
 									<tr>
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Aug. 2011 - Mar. 2016<br>
 										</b>
