--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google MyCitations</a>
 									<br>
 									<p style="text-align: justify; margin-right: 30px; margin-left: 1px; font: 16px,sans-serif; height:28p">
-									I am a PhD student working under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. M. V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT), Gandhinagar, India. Also, I am working as a Junior Research Fellow (JRF) at DA-IICT on the Indian Digital Heritage (IDH)-Hampi project. I completed M.Tech. in Computer Engineering under the supervision of <a href='http://www.svnit.ac.in/maz/' target='_blank'>Prof. M. A. Zaveri</a> at S. V. National Institute of Technology, Surat, India in 2010 and B.E. in Information Technology from The University of Mumbai in 2008.
+									I am a PhD student working under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. M. V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT), Gandhinagar, India. As a part of my PhD thesis, I have been working on techniques for inpainting, simultaneous inpainting and super-resolution, and auto-inpainting for digital repair of damaged facial regions in statues and cracked regions in heritage scenes. I have presented the synopsis of my PhD thesis work on 20th April 2016.<br><br>
+									
+									At DA-IICT, I have also worked as a junior research fellow (JRF) on the Indian Digital Heritage (<a href='http://digitalhampi.in/' target='_blank'>IDH</a>)-Hampi project. I completed M.Tech. in Computer Engineering under the supervision of <a href='http://www.svnit.ac.in/maz/' target='_blank'>Prof. M. A. Zaveri</a> at S. V. National Institute of Technology, Surat, India in 2010 and B.E. in Information Technology from Finolex Academy of Management and Technology, Ratnagiri (The University of Mumbai) in 2008.
 									</p>
 								</td>
 							</tr>
