--- a/education.html
+++ b/education.html
@@ -118,7 +118,7 @@
 								<h2 style="font-style:italic;" id="experience">&nbsp;Experience</h2>						
 								<table>
 									<tr>
-										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Apr. 2016 - till date<br>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Apr. 2016 - Jul. 2016<br>
 										</b>
 										</td>
 										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Teaching Assistant</b>,<br/>
