Update after book revision
Updated after book revision and thesis submission

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Email:</b></td>
-													<td><a href="mailto:milind_padalkar@daiict.ac.in">milind_padalkar@daiict.ac.in</a></td>
+													<td><a href="mailto:milind.padalkar@gmail.com">milind.padalkar@gmail.com</a></td>
 												</tr>
 											</table>
 										</td>
