--- a/education.html
+++ b/education.html
@@ -44,6 +44,8 @@
 										</td>
 										<td style='width:873px;height:42px;vertical-align:text-top;'><b>PhD Candidate (synopsis presented)</b>,<br/>
 										<i>Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT)</i>, Gandhinagar, India.<br>
+										Thesis title: <i>Novel Techniques for Auto-Inpainting in Heritage Reconstruction</i><br>
+										(Thesis submitted, under reivew)<br>
 										Supervisor: Dr. Manjunath V. Joshi
 										</td>
 									</tr>
