--- a/publications.html
+++ b/publications.html
@@ -78,7 +78,7 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="workshop">&nbsp;Book</h2>
 									<ul>
-										<li>M. G. Padalkar, M. V. Joshi and N. L. Khatri, <i>Super-resolution and Inpainting: Application to Digital Heritage Reconstruction</i>, Morgan Claypool Synthesis Lectures on Visual Computing: Computer Graphics, Animation, Computational Photography and Imaging [<b>Book under development (prospectus accepted)</b> (<a rel="nofollow" target="_blank" href="http://www.morganclaypool.com/toc/vcp/1/1">http://www.morganclaypool.com/toc/vcp/1/1</a>), Series Editor Prof. Brian Barsky (UC Berkeley).]</li>
+										<li>M. G. Padalkar, M. V. Joshi and N. L. Khatri, <i>Super-resolution and Inpainting: Application to Digital Heritage Reconstruction</i>, Morgan Claypool Synthesis Lectures on Visual Computing: Computer Graphics, Animation, Computational Photography and Imaging [<b>Book under development (prospectus accepted, revised draft submitted)</b> (<a rel="nofollow" target="_blank" href="http://www.morganclaypool.com/toc/vcp/1/1">http://www.morganclaypool.com/toc/vcp/1/1</a>), Series Editor Prof. Brian Barsky (UC Berkeley).]</li>
 									</ul>
 								</td>								
 							</tr>
@@ -86,7 +86,7 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="workshop">&nbsp;Book Chapter</h2>
 									<ul>
-										<li>M. G. Padalkar and M. V. Joshi, "Automatic detection and inpainting of defaced regions and cracks in heritage monuments," [<b>Chapter submitted (under review)</b> to Prof. Santanu Chaudhury, IIT Delhi whose proposal for publishing an edited volume of chapters outlining the outcome of different aspects of the Indian Digital Heritage (IDH)-Hampi project has been approved by Springer-Verlag (<a rel="nofollow" target="_blank" href="http://digitalhampi.in/#book">http://digitalhampi.in/#book</a>)]</li>
+										<li>M. G. Padalkar and M. V. Joshi, "Automatic detection and inpainting of defaced regions and cracks in heritage monuments," [<b>Revised draft to be submitted</b> to Prof. Santanu Chaudhury, IIT Delhi whose proposal for publishing an edited volume of chapters outlining the outcome of different aspects of the Indian Digital Heritage (IDH)-Hampi project has been approved by Springer-Verlag (<a rel="nofollow" target="_blank" href="http://digitalhampi.in/#book">http://digitalhampi.in/#book</a>)]</li>
 									</ul>
 								</td>								
 							</tr>
