--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,14 @@
 						<tbody>
 							<tr>
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
+								<h2 style="font-style:italic;" id="workshop">&nbsp;Book</h2>
+									<ul>
+										<li>M. G. Padalkar, M. V. Joshi and N. L. Khatri, "Digital Heritage Reconstruction Using Super-resolution and Inpainting", <a rel="nofollow" target="_blank" href="http://www.morganclaypoolpublishers.com/catalog_Orig/product_info.php?products_id=1008"><i>Synthesis Lectures on Visual Computing, Morgan & Claypool Publishers</i></a>, Dec. 2016.</li>
+									</ul>
+								</td>								
+							</tr>
+							<tr>
+								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="conference">&nbsp;Journal</h2>
 									<ul>
 										<li>M. G. Padalkar and M. V. Joshi, "Auto-inpainting Heritage Scenes: A Complete Framework for Detecting and Infilling Cracks in Images and Videos with Quantitative Assessment," <i>Machine Vision and Applications (MVA)</i>, vol. 26, no. 2-3, 317-337, March 2015.
@@ -48,7 +56,7 @@
 							</tr>
 							<tr>
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
-								<h2 style="font-style:italic;" id="conference">&nbsp;Conference</h2>
+								<h2 style="font-style:italic;" id="conference">&nbsp;Conferences and Workshops</h2>
 									<ul>
 										<li>M. G. Padalkar, M. V. Joshi and N. Khatri, "Simultaneous Inpainting and Super-resolution Using Self-learning," in <i>26th British Machine Vision Conference (BMVC-2015)</i>, Swansea, UK, Sept. 7-10, 2015, pp. 105.1-105.12.
 										[Online]. Available: <a rel='nofollow' target='_blank'  href='https://dx.doi.org/10.5244/C.29.105'>https://dx.doi.org/10.5244/C.29.105</a> 
@@ -59,13 +67,6 @@
 										<br/>[<a target="_blank" href="./files/paper51.pdf?attredirects=0&amp;d=1/index.html">draft</a>]<br/><br/></li>
 										<li>M. G. Padalkar and M. A. Zaveri, "Dissolve Detection Based Shot Identification Using Singular Value Decomposition," in <i>Proceedings of the 2010 Fourth Asia International Conference on Mathematical/Analytical Modelling and Computer Simulation (AMS'10),</i> IEEE Computer Society, Kota Kinabalu, Malaysia, May 2010, pp. 312-316. [Online]. Available: <a rel='nofollow' target='_blank' href='http://dx.doi.org/10.1109/AMS.2010.69'>http://dx.doi.org/10.1109/AMS.2010.69</a><br/><br/>
 										</li>
-									</ul>
-								</td>								
-							</tr>
-							<tr>
-								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
-								<h2 style="font-style:italic;" id="workshop">&nbsp;Workshop</h2>
-									<ul>
 										<li>M. G. Padalkar, M. V. Vora, M. V. Joshi, M. A. Zaveri, and M. S. Raval, "Identifying vandalized regions in facial images of statues for inpainting," in <i>New Trends in Image Analysis and Processing, ICIAP 2013</i>, ser. Lecture Notes in Computer Science. Springer Berlin Heidelberg, Sept. 2013, vol. 8158, pp. 208-217. [Online]. Available:  <a rel="nofollow" target="_blank" href="http://dx.doi.org/10.1007/978-3-642-41190-8_23">http://dx.doi.org/10.1007/978-3-642-41190-8_23</a>
 										<div class='sites-embed-align-left-wrapping-off'><div style='width:225px;' class='sites-embed-border-on sites-embed'><h4 class='sites-embed-title'>[Presentation]</h4><div class='sites-embed-content sites-embed-type-docs-video'><iframe src='https://docs.google.com/file/d/0BzM1FI5bddl1SlR6VHpENlN3WlU/preview' onload='window.scrollTo(0,0)' allowfullscreen='true' frameborder='0' height='145' width='225'></iframe></div>
 										<br/><br/></li>
@@ -74,14 +75,6 @@
 									</ul>
 								</td>								
 							</tr>	
-							<tr>
-								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
-								<h2 style="font-style:italic;" id="workshop">&nbsp;Book</h2>
-									<ul>
-										<li>M. G. Padalkar, M. V. Joshi and N. L. Khatri, <i>Super-resolution and Inpainting: Application to Digital Heritage Reconstruction</i>, Morgan Claypool Synthesis Lectures on Visual Computing: Computer Graphics, Animation, Computational Photography and Imaging [<b>Book under development (prospectus accepted, revised draft submitted)</b> (<a rel="nofollow" target="_blank" href="http://www.morganclaypool.com/toc/vcp/1/1">http://www.morganclaypool.com/toc/vcp/1/1</a>), Series Editor Prof. Brian Barsky (UC Berkeley).]</li>
-									</ul>
-								</td>								
-							</tr>
 							<tr>
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="workshop">&nbsp;Book Chapter</h2>
