--- a/education.html
+++ b/education.html
@@ -42,10 +42,11 @@
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>2011 - till date<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>PhD Candidate (synopsis presented)</b>,<br/>
-										<i>Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT)</i>, Gandhinagar, India.<br>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>PhD Candidate</b>,<br/>
+										<i>Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT)</i>, Gandhinagar, India,<br>
+										CPI: 9.00/10.<br>
 										Thesis title: <i>Novel Techniques for Auto-Inpainting in Heritage Reconstruction</i><br>
-										(Thesis submitted, under reivew)<br>
+										(Review received from one examiner, awaiting review from one more examiner)<br>
 										Supervisor: Dr. Manjunath V. Joshi
 										</td>
 									</tr>
