--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<p style="text-align: justify; margin-right: 30px; margin-left: 1px; font: 16px,sans-serif; height:28p">
 									I am a PhD student working under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. M. V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT), Gandhinagar, India. As a part of my PhD thesis, I have been working on techniques for inpainting, simultaneous inpainting and super-resolution, and auto-inpainting for digital repair of damaged facial regions in statues and cracked regions in heritage scenes.<br><br>
 									
-									I have recently submitted my PhD thesis titled "Novel Techniques for Auto-inpainting in Heritage Reconstruction" and awaiting reviews. Presently, I am looking for research opportunities in the fields of computer vision, image processing and machine learning.<br><br>
+									I have submitted my PhD thesis titled "Novel Techniques for Auto-inpainting in Heritage Reconstruction" in September 2016 and awaiting reviews. Presently, I am looking for research opportunities in the fields of computer vision, image processing and machine learning.<br><br>
 									
 									At DA-IICT, I have also worked as a junior research fellow (JRF) on the Indian Digital Heritage (<a href='http://digitalhampi.in/' target='_blank'>IDH</a>)-Hampi project. I completed M.Tech. in Computer Engineering under the supervision of <a href='http://www.svnit.ac.in/maz/' target='_blank'>Prof. M. A. Zaveri</a> at S. V. National Institute of Technology, Surat, India in 2010 and B.E. in Information Technology from Finolex Academy of Management and Technology, Ratnagiri (The University of Mumbai) in 2008.
 									</p>
