Awards page added
Awards page added and picture updated

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Milind Padalkar</title>
+		<title>Milind G. Padalkar</title>
 		<link rel="stylesheet" type="text/css" href="mytheme.css">
 		<link rel="shortcut icon" href="./files/favicon.ico" type="image/x-icon" />
 	</head>
@@ -8,12 +8,13 @@
 	<body>
 	
 		<div id="heading">
-			<h1> Milind Padalkar </h1>
+			<h1> Milind G. Padalkar </h1>
 			
 			<div id="nav">
 				<ul>
-					<li> <a href="index.html"> Home </a></li>
+					<li> <a href="index.html"> About Me </a></li>
 					<li> <a href="education.html"> Education and Experience </a></li>
+					<li> <a href="awards.html"> Awards and Honors </a></li>
 					<li> <a href="publications.html"> Publications </a></li>
 					<li> <a href="links.html"> Links </a></li>
 					<li> <a href="contact.html"> Contact </a></li>
@@ -33,18 +34,27 @@
 						<tbody>
 							<tr>
 								<td width="50%">&nbsp;
-									<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/milind3.JPG?attredirects=0/index.html"><img style="width: 95%;" src="./files/milind3.JPG?attredirects=0/index.html" border="0"></a></div>
+									<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/milind4.JPG?attredirects=0/index.html"><img style="width: 95%;" src="./files/milind4.JPG?attredirects=0/index.html" border="0"></a>
+									<br><br><br> 
+									<b>Milind G. Padalkar</b>&nbsp;<br>
+									PhD Candidate,<br>
+									<i>DA-IICT, Gandhinagar</i><br>
+									<!--<a href="mailto:milind.padalkar@gmail.com">milind.padalkar@gmail.com</a><br>-->
+									<br>
+									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google MyCitations</a>
+									<br>
+									</div>
 									<!--<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/DSC00740.JPG?attredirects=0/index.html"><img style="width: 95%;" src="./files/DSC00740.JPG?attredirects=0/index.html" border="0"></a></div>-->
 								<br>
 								</td>
 								<td width="50%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
-									<b>Milind Padalkar,</b>&nbsp;<br>
+									<!--<b>Milind Padalkar,</b>&nbsp;<br>
 									PhD Candidate<br>
 									<i>DA-IICT, Gandhinagar<br>
 									</i><a href="mailto:milind.padalkar@gmail.com">milind.padalkar@gmail.com</a><br>
 									<br>
 									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google MyCitations</a>
-									<br>
+									<br>-->
 									<p style="text-align: justify; margin-right: 30px; margin-left: 1px; font: 16px,sans-serif; height:28p">
 									I am a PhD student working under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. M. V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT), Gandhinagar, India. As a part of my PhD thesis, I have been working on techniques for inpainting, simultaneous inpainting and super-resolution, and auto-inpainting for digital repair of damaged facial regions in statues and cracked regions in heritage scenes.<br><br>
 									
