--- a/publications.html
+++ b/publications.html
@@ -8,13 +8,13 @@
 	<body>
 	
 		<div id="heading">
-			<h1> Milind Padalkar </h1>
+			<h1> Milind G. Padalkar </h1>
 			
 			<div id="nav">
 				<ul>
-					<li> <a href="index.html"> Home </a></li>
-					<li> <a href="education.html"> Education and Experience </a>
-					</li>
+					<li> <a href="index.html"> About Me </a></li>
+					<li> <a href="education.html"> Education and Experience </a></li>
+					<li> <a href="awards.html"> Awards and Honors </a></li>
 					<li> <a href="publications.html"> Publications </a></li>
 					<li> <a href="links.html"> Links </a></li>
 					<li> <a href="contact.html"> Contact </a></li>
