Index page updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<tbody>
 							<tr>
 								<td width="50%">&nbsp;
-									<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/milind4.jpg?attredirects=0/index.html"><img style="width: 95%;" src="./files/milind4.jpg?attredirects=0/index.html" border="0"></a>
+									<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/milind4.jpg"><img style="width: 95%;" src="./files/milind4.jpg" border="0"></a>
 									<br><br><br> 
 									<b>Milind G. Padalkar</b>&nbsp;<br>
 									PhD Candidate,<br>
