Updated website after PhD
Website update after PhD thesis defense

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 				
 				<div id="content">
 				<h1 style="text-align:left; color:brown">&nbsp Contact</h1>
-					<table border=0>
+					<table border=0 width=100%>
 						<tr>
 							<td>
 								<table border=0>
@@ -41,16 +41,16 @@
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Address:</b></td>
 													<td>
-														Lab 202,<br>
-														DA-IICT,<br>
-														Near Indroda Circle,<br>
-														Gandhinagar, Gujarat,<br>
-														India 382007
+														Vehant Technologies Pvt. Ltd.,<br>
+														B-29, Sector-57,<br>
+														NOIDA - 201301,<br>
+														Uttar Pradesh,<br>
+														India
 													</td>
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Phone:</b></td>
-													<td>+91-79-30510-522</td>
+													<td>+91-120-4610200</td>
 												</tr>
 												<tr style="text-align: left;vertical-align:text-top;">
 													<td><b> &nbsp Email:</b></td>
@@ -58,26 +58,24 @@
 												</tr>
 											</table>
 										</td>
-										<td>																		
+										<!--	<td>																		
 											<img src="./files/wide-photo.jpg" height="250px">
+										</td>
+										-->
+										<td width="77%" align="center">
+											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.8865632795055!2d77.35208141429167!3d28.603179692161408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce512bed93215%3A0xe236c5926b249615!2sVehant+Technologies+Private+Limited!5e0!3m2!1sen!2s!4v1492429049502" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
 										</td>
 									</tr>
 								</table>
 							</td>
 						</tr>
+						<!--
 						<tr>
 							<td width="100%" align="center">
-								<!--
-								<iframe
-								  width="100%"
-								  height="400"
-								  frameborder="0" style="border:0" title="DA-IICT"
-								  src="https://www.google.com/maps/embed/v1/search?key=AIzaSyC0C69ffwiNjWhWoyjrcZA8BRz9AQYiHGQ&q=DA-IICT">
-								</iframe>
-								-->
-								<iframe scrolling="no" class="map_embed" frameborder="0" height="400" width="100%" title="DA-IICT" src="https://maps.google.com/?ll=23.188463%2C72.628428&amp;spn=0.014044%2C0.022273&amp;ie=UTF8&amp;z=15&amp;t=roadmap&amp;sll=23.188463%2C72.628428&amp;sspn=0.014044%2C0.022273&amp;q=DA-IICT&amp;output=embed"></iframe>
+								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3502.8865632795055!2d77.35208141429167!3d28.603179692161408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce512bed93215%3A0xe236c5926b249615!2sVehant+Technologies+Private+Limited!5e0!3m2!1sen!2s!4v1492429049502" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 							</td>
 						</tr>
+						-->
 					</table>
 				</div>
 			</div>
