--- a/education.html
+++ b/education.html
@@ -39,14 +39,13 @@
 								<h2 style="font-style:italic;" id="education">&nbsp;Education</h2>						
 								<table>
 									<tr>
-										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>2011 - till date<br>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>2011 - 2017<br>
 										</b>
 										</td>
-										<td style='width:873px;height:42px;vertical-align:text-top;'><b>PhD Candidate</b>,<br/>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Ph.D. in Information and Communication Technology</b>,<br/>
 										<i>Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT)</i>, Gandhinagar, India,<br>
 										CPI: 9.00/10.<br>
 										Thesis title: <i>Novel Techniques for Auto-Inpainting in Heritage Reconstruction</i><br>
-										(Review received from one examiner, awaiting review from one more examiner)<br>
 										Supervisor: Dr. Manjunath V. Joshi
 										</td>
 									</tr>
@@ -120,6 +119,14 @@
 								<td width="100%"; style="text-align: left; margin-right: auto; margin-left: auto; font-size:18px">&nbsp;<br>
 								<h2 style="font-style:italic;" id="experience">&nbsp;Experience</h2>						
 								<table>
+									<tr>
+										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Mar. 2017 - till date<br>
+										</b>
+										</td>
+										<td style='width:873px;height:42px;vertical-align:text-top;'><b>Senior Research Engineer</b>,<br/>
+										Vehant Technologies, NOIDA, India</i>.<br><br>
+										</td>
+									</tr>
 									<tr>
 										<td style="width:118px;height:42px;text-align:center;vertical-align:text-top;"><b>Apr. 2016 - Jul. 2016<br>
 										</b>
