--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 						<tbody>
 							<tr>
 								<td width="50%">&nbsp;
-									<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/milind4.jpg?attredirects=0/index.html"><img style="width: 95%;" src="./files/milind4.jpg?attredirects=0/index.html" border="0"></a>
+									<div style="display: block; text-align: center; margin-right: auto; margin-left: auto;"><a imageanchor="1" href="./files/milind4.jpg?attredirects=0/index.html"><img style="width: 75%;" src="./files/milind4.jpg?attredirects=0/index.html" border="0"></a>
 									<br><br><br> 
-									<b>Milind G. Padalkar</b>&nbsp;<br>
-									PhD Candidate,<br>
-									<i>DA-IICT, Gandhinagar</i><br>
+									<b>Milind G. Padalkar (Ph.D. in I.C.T.)</b>&nbsp;<br>
+									<i>Senior Research Engineer</i>,<br>
+									<a href="http://wwww.vehant.com" target=_blank>Vehant Technologies, NOIDA, India.</a><br>
 									<!--<a href="mailto:milind.padalkar@gmail.com">milind.padalkar@gmail.com</a><br>-->
 									<br>
 									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google MyCitations</a>
@@ -56,11 +56,11 @@
 									<a target="_blank" href="http://scholar.google.co.in/citations?user=D2tVZk8AAAAJ&amp;hl=en">Google MyCitations</a>
 									<br>-->
 									<p style="text-align: justify; margin-right: 30px; margin-left: 1px; font: 16px,sans-serif; height:28p">
-									I am a PhD student working under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. M. V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (DA-IICT), Gandhinagar, India. As a part of my PhD thesis, I have been working on techniques for inpainting, simultaneous inpainting and super-resolution, and auto-inpainting for digital repair of damaged facial regions in statues and cracked regions in heritage scenes.<br><br>
+									I work as a senior research engineer with <a href="http://wwww.vehant.com" target=_blank>Vehant Technologies</a>.
 									
-									I have submitted my PhD thesis titled "Novel Techniques for Auto-inpainting in Heritage Reconstruction" in September 2016 and awaiting reviews. Presently, I am looking for research opportunities in the fields of computer vision, image processing and machine learning.<br><br>
+									My Ph.D. thesis is titled "Novel Techniques for Auto-inpainting in Heritage Reconstruction", for which I worked under the supervision of <a href='http://intranet.daiict.ac.in/~mv_joshi/' target='_blank'>Prof. M. V. Joshi</a> at Dhirubhai Ambani Institute of Information and Communication Technology (<a href='http://www.daiict.ac.in/' target='_blank'>DA-IICT</a>), Gandhinagar, India.<br><br>
 									
-									At DA-IICT, I have also worked as a junior research fellow (JRF) on the Indian Digital Heritage (<a href='http://digitalhampi.in/' target='_blank'>IDH</a>)-Hampi project. I completed M.Tech. in Computer Engineering under the supervision of <a href='http://www.svnit.ac.in/maz/' target='_blank'>Prof. M. A. Zaveri</a> at S. V. National Institute of Technology, Surat, India in 2010 and B.E. in Information Technology from Finolex Academy of Management and Technology, Ratnagiri (The University of Mumbai) in 2008.
+									At DA-IICT, I have also worked as teaching assistant and as a junior research fellow (JRF) in the Indian Digital Heritage (<a href='http://digitalhampi.in/' target='_blank'>IDH</a>)-Hampi project. I completed M.Tech. in Computer Engineering under the supervision of <a href='http://www.svnit.ac.in/maz/' target='_blank'>Prof. M. A. Zaveri</a> at S. V. National Institute of Technology (<a href='http://www.svnit.ac.in/' target='_blank'>SVNIT</a>), Surat, India in 2010 and B.E. in Information Technology from Finolex Academy of Management and Technology (<a href='http://www.famt.ac.in/' target='_blank'>FAMT</a>), Ratnagiri (The University of Mumbai) in 2008.
 									</p>
 								</td>
 							</tr>
